--- a/BANKIR/win_Home.xaml
+++ b/BANKIR/win_Home.xaml
@@ -7,7 +7,7 @@
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:local="clr-namespace:BANKIR"
         mc:Ignorable="d"
-        Title="BANKIR" Height="900" Width="1400" WindowStartupLocation="CenterScreen" ResizeMode="CanResizeWithGrip" AllowsTransparency="True" WindowStyle="None" MouseDown="Window_MouseDown">
+        Title="BANKIR" Height="900" Width="1400" WindowStartupLocation="CenterScreen" ResizeMode="NoResize" AllowsTransparency="True" WindowStyle="None" MouseDown="Window_MouseDown">
     <Grid Background="#FF212122">
         <materialDesign:Card HorizontalAlignment="Left" Margin="10,10,0,0" VerticalAlignment="Top" Height="88" Width="200" Background="#FF212122">
             <Image HorizontalAlignment="Stretch" VerticalAlignment="Stretch" Source="Logo png - short.PNG" Margin="10"/>
@@ -33,6 +33,83 @@
                 <Label x:Name="lbl_TodayDate" Content="#Date#" HorizontalAlignment="Right" VerticalAlignment="Center" FontSize="16" FontFamily="Segoe UI Light" Foreground="White" Margin="10 0"/>
             </Grid>
         </materialDesign:Card>
-        
+        <materialDesign:Card HorizontalAlignment="Left" Margin="10,147,0,0" VerticalAlignment="Top" Height="54" Width="390" Background="#FF212122">
+            <Grid>
+                <Label Content="INCOME" HorizontalAlignment="Left" Margin="10,10,0,0" VerticalAlignment="Top" FontSize="18" FontFamily="Segoe UI Light" Foreground="White"/>
+
+            </Grid>
+        </materialDesign:Card>
+        <materialDesign:Card HorizontalAlignment="Left" Margin="405,147,0,0" VerticalAlignment="Top" Height="54" Width="390" Background="#FF212122">
+            <Grid>
+                <Label Content="OUTGOING" HorizontalAlignment="Left" Margin="10,10,0,0" VerticalAlignment="Top" FontSize="18" FontFamily="Segoe UI Light" Foreground="White"/>
+
+            </Grid>
+        </materialDesign:Card>
+        <materialDesign:Card HorizontalAlignment="Left" Margin="10,206,0,0" VerticalAlignment="Top" Height="270" Width="390" Background="#FF212122">
+            <Grid>
+                <ListView HorizontalAlignment="Left" Height="270" VerticalAlignment="Top" Width="390">
+                    <ListViewItem Height="40">
+                        <StackPanel Orientation="Horizontal">
+                            <materialDesign:PackIcon Kind="Plus" Margin="5 0" VerticalAlignment="Center" Foreground="Green"/>
+                            <TextBlock Text="Income Value" Foreground="LightGray" Margin="5 0" VerticalAlignment="Center" FontSize="14"/>
+                        </StackPanel>
+                    </ListViewItem>
+                    <ListViewItem Height="40">
+                        <StackPanel Orientation="Horizontal">
+                            <materialDesign:PackIcon Kind="Plus" Margin="5 0" VerticalAlignment="Center" Foreground="Green"/>
+                            <TextBlock Text="Income Value" Foreground="LightGray" Margin="5 0" VerticalAlignment="Center" FontSize="14"/>
+                        </StackPanel>
+                    </ListViewItem>
+                    <ListViewItem Height="40">
+                        <StackPanel Orientation="Horizontal">
+                            <materialDesign:PackIcon Kind="Plus" Margin="5 0" VerticalAlignment="Center" Foreground="Green"/>
+                            <TextBlock Text="Income Value" Foreground="LightGray" Margin="5 0" VerticalAlignment="Center" FontSize="14"/>
+                        </StackPanel>
+                    </ListViewItem>
+                </ListView>
+
+            </Grid>
+        </materialDesign:Card>
+        <materialDesign:Card HorizontalAlignment="Left" Margin="405,206,0,0" VerticalAlignment="Top" Height="270" Width="390" Background="#FF212122">
+            <Grid>
+                <ListView HorizontalAlignment="Left" Height="270" VerticalAlignment="Top" Width="390">
+                    <ListViewItem Height="40">
+                        <StackPanel Orientation="Horizontal">
+                            <materialDesign:PackIcon Kind="Minus" Margin="5 0" VerticalAlignment="Center" Foreground="Red"/>
+                            <TextBlock Text="Outgoing Value" Foreground="LightGray" Margin="5 0" VerticalAlignment="Center" FontSize="14"/>
+                        </StackPanel>
+                    </ListViewItem>
+                    <ListViewItem Height="40">
+                        <StackPanel Orientation="Horizontal">
+                            <materialDesign:PackIcon Kind="Minus" Margin="5 0" VerticalAlignment="Center" Foreground="Red"/>
+                            <TextBlock Text="Outgoing Value" Foreground="LightGray" Margin="5 0" VerticalAlignment="Center" FontSize="14"/>
+                        </StackPanel>
+                    </ListViewItem>
+                    <ListViewItem Height="40">
+                        <StackPanel Orientation="Horizontal">
+                            <materialDesign:PackIcon Kind="Minus" Margin="5 0" VerticalAlignment="Center" Foreground="Red"/>
+                            <TextBlock Text="Outgoing Value" Foreground="LightGray" Margin="5 0" VerticalAlignment="Center" FontSize="14"/>
+                        </StackPanel>
+                    </ListViewItem>
+                </ListView>
+            </Grid>
+        </materialDesign:Card>
+        <materialDesign:Card HorizontalAlignment="Left" Margin="10,498,0,0" VerticalAlignment="Top" Height="109" Width="785" Background="#FF212122">
+            <Grid>
+                <Label Content="Total Income" HorizontalAlignment="Left" Margin="10,10,0,0" VerticalAlignment="Top" FontSize="18" FontFamily="Segoe UI Light" Foreground="White"/>
+                <Label Content="Total Outgoings" HorizontalAlignment="Left" Margin="405,10,0,0" VerticalAlignment="Top" FontSize="18" FontFamily="Segoe UI Light" Foreground="White"/>
+                <Label Content="#Value#" HorizontalAlignment="Left" Margin="10,60,0,0" VerticalAlignment="Top" FontSize="16" FontFamily="Segoe UI Light" Foreground="Green"/>
+                <Label Content="#Value#" HorizontalAlignment="Left" Margin="405,60,0,0" VerticalAlignment="Top" FontSize="16" FontFamily="Segoe UI Light" Foreground="Red"/>
+
+            </Grid>
+        </materialDesign:Card>
+        <materialDesign:Card HorizontalAlignment="Left" Margin="10,612,0,0" VerticalAlignment="Top" Height="54" Width="785" Background="#FF212122">
+            <Grid>
+                <Label Content="Disposable Income" HorizontalAlignment="Left" Margin="10,10,0,0" VerticalAlignment="Top" FontSize="18" FontFamily="Segoe UI Light" Foreground="White"/>
+                <Label Content="#value#" HorizontalAlignment="Left" Margin="187,10,0,0" VerticalAlignment="Top" FontSize="18" FontFamily="Segoe UI Semibold" Foreground="White"/>
+
+            </Grid>
+        </materialDesign:Card>
+
     </Grid>
 </Window>
